--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "tsx --watch src/infra/http/server.ts",
+    "dev": "tsx --watch src/infrastructure/http/server.ts",
     "build": "tsup src --out-dir build",
     "knex": "node --import tsx ./node_modules/.bin/knex",
     "test": "vitest",
