--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^20.14.2",
+    "@types/supertest": "^6.0.2",
     "eslint": "^9.4.0",
     "sqlite3": "^5.1.7",
+    "supertest": "^7.0.0",
     "tsup": "^8.1.0",
     "tsx": "^4.15.1",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vitest": "^1.6.0"
   }
 }
